spelling error fixed

--- a/templates/query.html
+++ b/templates/query.html
@@ -61,7 +61,7 @@
               <input type="text" id="query1" name="query1" value="{{request.form.get('query1','')}}">
           </div>
           <div>
-              <label for="query">Enter genomic postion/coordinate:</label>
+              <label for="query">Enter genomic position/coordinate:</label>
               <input type="text" id="query2" name="query2"value="{{request.form.get('query2','')}}">
           </div>
           <div>
